// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can add new items (onPatch) 1`] = `
Array [
  Object {
    "op": "add",
    "path": "/items/0",
    "value": Object {
      "image": "",
      "name": "Sun Conure",
      "price": 1000,
    },
  },
]
`;

exports[`can add new items (onPatch) 2`] = `
Array [
  Object {
    "op": "add",
    "path": "/items/0",
    "value": Object {
      "image": "",
      "name": "Sun Conure",
      "price": 1000,
    },
  },
]
`;

exports[`can add new items (onSnapshot) 1`] = `
Object {
  "items": Array [
    Object {
      "image": "",
      "name": "Sun Conure",
      "price": 800,
    },
  ],
}
`;

exports[`can add new items (onSnapshot) 2`] = `
Array [
  Object {
    "items": Array [
      Object {
        "image": "",
        "name": "Sun Conure",
        "price": 1000,
      },
    ],
  },
  Object {
    "items": Array [
      Object {
        "image": "",
        "name": "Sun Conure",
        "price": 800,
      },
    ],
  },
]
`;
